fixed bug where bird would jump when user clicked arrow icons in left and right buttons

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,8 @@ body {
   bottom: 0;
   left: 50%;
   width: 300px;
-  margin-left: -150px; 
+  margin-left: -150px;
+  z-index: 2;
 }
 
 .navigation-keys button, #try-again{
